Changelog
=========

0.9.4 - Unreleased
------------------

0.9.3 - 2009-01-31
------------------

* Fix widget JavaScript and CSS for search form portlet

0.9.2 - 2009-01-31
------------------

* Clarify selected sort
* Make portlet usable outside the context of the collection
* Fix portlet class
* Don't render hour and minute fields on date 

0.9.1 - 2009-01-30
------------------

* Move the search form viewlet into a portlet
* Patch the ATCT addCrierion method to properly initialize criteria so
  that they can safely be created in code
* Use the same mismatched meta_type ATCT for the
  ATFriendlyDateCriteria

0.9 - 2009-01-29
----------------

* Fix incompatibility when extended sort criterion were added to
  existing ATCT ATTopic instances

0.8 - 2009-01-29
----------------

* Added multiple sort links to the batch macro

0.7 - 2009-01-28
----------------

* Change to use the same names as ATCT where appropriate to avoid some
  problems where the ATCT names are expected.
* Flesh out the GenericSetup profile with all other bits in the Plone
  profile that make reference to criteria.

0.6 - 2009-01-26
----------------

* Use a form prefix for the search form.  Fixes calendar JavaScript
  bug.
* Fix criterion label to point to the correct form input
* Allow widget special help/description to appear even if the label
  isn't rendered and use this for the comma widget
* Fix the handling of postbacks in the comma widget
* Use a "Search Form" view that only renders the search form
* Added boolean criteria
* Added date criteria
* Added path criteria
* Added relative path criteria
* Added integer criteria

0.5 - 2009-01-25
----------------

* Form criteria are now designated by selecting which fields of each
  criterion should be rendered on the search form
* Improve label handling.  Remove labels for 'value' field and
  "required" markers for all fields.
* Make the search form collapsible and start collapsed when the form
  has been submitted