@@ -1,12 +1,6 @@
 TODO
 ====
 
-* KeyError: u'unsorted'
-
-  <jonstahl> zenwryly: formcriteria 0.9.3 gives me
-  http://paste.plone.org/26150 in plone 3.1.7 on hitting "criteria"
-  tab for the stock "news" collection in a bare, new site.
-
 * ArchetypesTool: Trying to register
   "ATContentTypes.ATSimpleStringCriterion" which has already been
   registered.  The new type
